--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
   </head>
   <body>
     <header>
-      <span><a href="">WEB</a>STUDIO</span>
+      <a href="./index.html">WEBSTUDIO</a>
       <nav>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+    </ul>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <ul>
           <li>
@@ -55,67 +59,77 @@
       </section>
       <section>
         <h2>What are we doing</h2>
-        <img
-          src="../goit-markup-hw-01/images/img1.jpg"
-          width="360"
-          height="300"
-          alt="Monitor, display screen"
-        />
-        <img
-          src="../goit-markup-hw-01/images/img2.jpg"
-          width="360"
-          height="300"
-          alt="Aplication on the phone"
-        />
-        <img
-          src="../goit-markup-hw-01/images/img3.jpg"
-          width="360"
-          height="300"
-          alt="Working with laptop and phone"
-        />
+        <ul>
+          <li>
+            <img
+            src="./images/img1.jpg"
+            width="360"
+            height="300"
+            alt="Monitor, display screen"
+          />
+        </li>
+          <li>
+            <img
+            src="./images/img2.jpg"
+            width="360"
+            height="300"
+            alt="Aplication on the phone"
+          />
+        </li>
+          <li>
+            <img
+            src="./images/img3.jpg"
+            width="360"
+            height="300"
+            alt="Working with laptop and phone"
+          />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
-        <figure>
+        <ul>
+        <li>
           <img
-            src="../goit-markup-hw-01/images/img4.jpg"
+            src="./images/img4.jpg"
             width="264"
             height="260"
             alt="Mark Guerrero Product Designer"
           />
-          <figcaption><b>Mark Guerrero</b><br>Product Designer</figcaption>
-        </figure>
-        <figure>
+          <h3>Mark Guerrero</h3><p>Product Designer</p>
+        </li>
+        <li>
           <img
-            src="../goit-markup-hw-01/images/img5.jpg"
+            src="./images/img5.jpg"
             width="264"
             height="260"
             alt="Tom Ford Frontend Developer"
           />
-          <figcaption><b>Tom Ford</b><br>Frontend Developer</figcaption>
-        </figure>
-        <figure>
+          <h3>Tom Ford</h3><p>Frontend Developer</p>
+        </li>
+        <li>
           <img
-            src="../goit-markup-hw-01/images/img6.jpg"
+            src="./images/img6.jpg"
             width="264"
             height="260"
             alt="Camila Garcia Marketing"
           />
-          <figcaption><b>Camila Garcia</b><br>Marketing</figcaption>
-        </figure>
-        <figure>
+          <h3>Camila Garcia</h3><p>Marketing</p>
+        </li>
+        <li>
           <img
-            src="../goit-markup-hw-01/images/img7.jpg"
+            src="./images/img7.jpg"
             width="264"
             height="260"
             alt="Daniel Wilson UI Designer"
           />
-          <figcaption><b>Daniel Wilson</b><br>UI Designer</figcaption>
-        </figure>
+          <h3>Daniel Wilson</h3><p>UI Designer<p>
+        </li>
+      </ul>
       </section>
     </main>
     <footer>
-      <span><a href="">WEB</a>STUDIO</span>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
